feat: add service, seo  endpoints
